--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img id="logo" src="OODA Wayfinders.png" alt="OODA Wayfinders Logo">
         <div id="black-strip"></div>
         <button id="audio-controls" aria-label="Toggle Audio">
-            <svg id="icon-unmuted" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"></polygon><path d="M19.07 4.93a10 10 0 0 1 0 14.14M15.54 8.46a5 5 0 0 1 0 7.07"></path></svg>
+            <svg id="icon-unmuted" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"></polygon><path d="M19.07 4.93a10 10 0 0 1 0 14.14M15.54 8.46a5 5 0 0 1 0 7.07"></path></svg>
             <svg id="icon-muted" xmlns="http://www.w3.org/2000/svg"
 width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="display: none;"><polygon points="11 5 6 9 2 9 2 15 6 15
 11 19 11 5"></polygon><line x1="23" y1="1" x2="1" y2="23"></line></svg>
@@ -63,7 +63,7 @@ width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" str
 
     <script>
         let scene, camera, renderer, ocean, clock, raycaster, mouse;
-        let galaxyTexture, uiPlane;
+        let uiPlane;
         const clickableObjects = [];
 
         function createInteractive3DUI() {
@@ -72,11 +72,9 @@ width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" str
             canvas.width = size; canvas.height = size / 2;
             const context = canvas.getContext('2d');
 
-            // --- STRATEGY CHANGE: Draw a black background for additive blending ---
             context.fillStyle = '#000000';
             context.fillRect(0, 0, canvas.width, canvas.height);
 
-            // Now draw the UI elements in white on top of the black
             context.strokeStyle = '#FFFFFF';
             context.fillStyle = '#FFFFFF';
             context.lineWidth = 6;
@@ -108,19 +106,17 @@ width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" str
             context.fillText("To do", doX, bottomRowY + btnHeight / 2);
 
             const texture = new THREE.CanvasTexture(canvas);
-            // --- STRATEGY CHANGE: Use Additive Blending to achieve transparency ---
             const material = new THREE.MeshBasicMaterial({
                 map: texture,
                 transparent: true,
                 blending: THREE.AdditiveBlending,
-                depthWrite: false // Good practice for blended objects to prevent depth artifacts
+                depthWrite: false
             });
             const geometry = new THREE.PlaneGeometry(120, 60);
 
             uiPlane = new THREE.Mesh(geometry, material);
             scene.add(uiPlane);
 
-            // The invisible button logic remains unchanged and is correct
             const invisibleMat = new THREE.MeshBasicMaterial({ transparent: true, opacity: 0, side: THREE.DoubleSide });
             const planeW = 120; const planeH = 60;
             const canW = 1024; const canH = 512;
@@ -177,16 +173,16 @@ width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" str
             document.body.insertBefore(renderer.domElement, document.body.firstChild);
             renderer.domElement.id = 'skybox-canvas';
 
-            const textureLoader = new THREE.TextureLoader();
-            textureLoader.load('https://www.solarsystemscope.com/textures/download/8k_stars_milky_way.jpg', (t) => { scene.background = t; });
-            galaxyTexture = textureLoader.load('https://cdn.eso.org/images/screen/eso0932a.jpg', (t) => { t.wrapS = THREE.RepeatWrapping; });
-
-            const galaxyGeo = new THREE.PlaneGeometry(12000, 3000);
-            const galaxyMat = new THREE.MeshBasicMaterial({ map: galaxyTexture, transparent: true });
-            const galaxyPlane = new THREE.Mesh(galaxyGeo, galaxyMat);
-            galaxyPlane.position.set(0, 700, -5000);
-            scene.add(galaxyPlane);
-
+            // --- THE FIX: Use a CubeTextureLoader with a known-good, CORS-enabled asset ---
+            const loader = new THREE.CubeTextureLoader();
+            const texture = loader.setPath('https://raw.githubusercontent.com/codypearce/some-skyboxes/master/skyboxes/purplenebula/').load([
+                'purplenebula_ft.png', 'purplenebula_bk.png',
+                'purplenebula_up.png', 'purplenebula_dn.png',
+                'purplenebula_rt.png', 'purplenebula_lf.png'
+            ]);
+            scene.background = texture;
+            // The old galaxy plane is no longer needed as the skybox provides the background
+            
             const waterGeometry = new THREE.PlaneGeometry(50000, 50000);
             ocean = new THREE.Water(waterGeometry, {
                 textureWidth: 512, textureHeight: 512,
@@ -261,8 +257,12 @@ width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" str
             if (uiPlane) {
                 camera.lookAt(uiPlane.position.x, uiPlane.position.y, uiPlane.position.z - 1000);
             }
+            
+            // We can add a slow rotation to the skybox for a dynamic effect
+            if (scene.background) {
+                scene.background.rotation += 0.0001;
+            }
 
-            if (galaxyTexture) { galaxyTexture.offset.x -= 0.00005; }
             if (ocean) { ocean.material.uniforms['time'].value += 1.0 / 60.0; }
 
             renderer.render(scene, camera);
